--- a/app/templates/error_log.html
+++ b/app/templates/error_log.html
@@ -5,7 +5,7 @@
 		<h2>{{ title }}</h2>
 		
 		<table class="error-log">
-			<thead>
+			<thead class="has-bg">
 				<tr>
 					<th>Date</th>
 					<th>Level</th>
