--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1001,12 +1001,13 @@ table {
 					.video .thumbnail img {
 						grid-column: thumb; /* Overlays number */
 						
-						height: 100%;
+						height: calc((var(--thumb-width) / 16) * 9);
 					}
 					
 					.video .number {
 						grid-column: thumb;
 						
+						height: calc((var(--thumb-width) / 16) * 9);
 						/* Oversized play order */
 						font-size: 2.75rem;
 						line-height: 3rem;
