--- a/app/static/style.css
+++ b/app/static/style.css
@@ -826,7 +826,7 @@ table {
 					}
 		
 		.list-container {
-			--thumb-width: 5.1rem;
+			--thumb-height: 2.8rem;
 			--item-gap: 0.25rem;
 			--border-offset: 0.25rem;
 			--border-width: 0.5rem;
@@ -872,7 +872,7 @@ table {
 				
 				.list li {
 					display: grid;
-					grid-template-columns: [position] min-content [thumbnail] var(--thumb-width) [title] 1fr;
+					grid-template-columns: [position] min-content [thumbnail] auto [title] 1fr;
 					align-items: center;
 					
 					width: 100%;
@@ -953,13 +953,14 @@ table {
 			.videos {
 				/* Fit at least 10 items, or 1 if fewer
 				   (with sane limits for giant screens */
-				min-height: calc(((var(--thumb-width) / 16) * 9) +
+				min-height: calc(var(--thumb-height +
 							2 * (var(--border-offset) +
 								 var(--border-width)));
 				max-height: max(65vh, calc(10 *
-							(((var(--thumb-width) / 16) * 9) + var(--item-gap)) +
-							2 * (var(--border-offset) +
-								 var(--border-width))));
+							(var(--thumb-height) +
+							 var(--item-gap)) +
+							 2 * (var(--border-offset) +
+								  var(--border-width))));
 			}
 				
 				.videos::before {
@@ -981,7 +982,7 @@ table {
 					grid-template-columns: [thumb] 1fr;
 					
 					position: relative;
-					height: calc((var(--thumb-width) / 16) * 9);
+					height: var(--thumb-height);
 					overflow: hidden;
 					
 					background-color: var(--loading);
@@ -1001,13 +1002,13 @@ table {
 					.video .thumbnail img {
 						grid-column: thumb; /* Overlays number */
 						
-						height: calc((var(--thumb-width) / 16) * 9);
+						height: var(--thumb-height);
 					}
 					
 					.video .number {
 						grid-column: thumb;
 						
-						height: calc((var(--thumb-width) / 16) * 9);
+						height: var(--thumb-height);
 						/* Oversized play order */
 						font-size: 2.75rem;
 						line-height: 3rem;
