thumb performance test

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,7 +105,7 @@
 							  ? document.getElementById(id) : null);
 				
 				// Create from template
-				// Note: using firstElementChild of template as a DocumentFragment
+				// Note: using firstElementChild of template as DocumentFragment
 				// can't be used as a target for some events
 				let notification = template.notification.content.firstElementChild
 					.cloneNode(true);
