--- a/app/static/style.css
+++ b/app/static/style.css
@@ -999,9 +999,9 @@ table {
 				
 					.video .thumb {
 						position: absolute;
-						/* Take aspect ratio from width+height attributes */
+						/* Take aspect ratio from HTML width & height */
 						width: 100%;
-						height: auto;
+						height: 100%;
 						z-index: 2;
 					}
 					
@@ -1025,6 +1025,7 @@ table {
 					display: -webkit-box;
 					-webkit-line-clamp: 2;
 					-webkit-box-orient: vertical;
+					padding-bottom: 0.15rem; /* Don't chop tall letters */
 				}
 
 @media screen and (max-width: 860px) {
