--- a/app/templates/init.html
+++ b/app/templates/init.html
@@ -4,7 +4,7 @@
 	<div class="full-width">
 		<h2>{{ title }}</h2>
 		
-		<p>youtube-dl-web-viewer needs to create a database to store playlist and video metadata. You can create it here, or alternatively from the command line with <strong>flask init-db</strong>.</p>
+		<p>youtube-dl-web-viewer needs to create a database to store playlist and video metadata. You can create it here, or alternatively from the command line with <strong>flask create-db</strong>.</p>
 		{% if message %}
 			<p class="init-warning"><strong>{{ message }}</strong></p>
 		{% endif %}
